--- a/metadata.yaml
+++ b/metadata.yaml
@@ -39,5 +39,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'German fiction -- Translations into English'
 - !lcc 'PT'
+- GITenberg
 title: Quicksands
 url: http://www.gutenberg.org/ebooks/34953
